--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,1 +1,25 @@
-<p>form works!</p>
+<div class="form-container">
+  <form [formGroup]="multiForm" id="multiForm">
+    <div *ngIf="step == 1" formGroupName="userDetails">
+      <h4>User Details</h4>
+      <div>
+        <label for="first_name">First Name</label>
+        <input
+          type="text"
+          formControlName="first_name"
+          id="first_name"
+          placeholder="First Name"
+        />
+      </div>
+      <div>
+        <label for="last_name">Last Name</label>
+        <input
+          type="text"
+          formControlName="last_name"
+          id="last_name"
+          placeholder="Last Name"
+        />
+      </div>
+    </div>
+  </form>
+</div>
