--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,6 +1,6 @@
 <div class="form-container">
   <form [formGroup]="multiForm" id="multiForm">
-    <div *ngIf="step == 1" formGroupName="userDetails">
+    <div *ngIf="step == 1">
       <h4>User Details</h4>
       <div>
         <label for="first_name">First Name</label>
@@ -20,50 +20,164 @@
           placeholder="Last Name"
         />
       </div>
-    </div>
-    <div *ngIf="step == 2" formControlName="skills">
-      <h4>skills</h4>
       <div>
-        <label for="skills">skills</label>
+        <label for="last_name">Email</label>
+        <input
+          type="email"
+          formControlName="email"
+          id="email"
+          placeholder="email"
+        />
+      </div>
+      <div>
+        <label for="last_name">Phone</label>
         <input
           type="text"
-          formControlName="skills"
-          id="skills"
-          placeholder="skills"
+          formControlName="phone"
+          id="phone"
+          placeholder="phone"
         />
       </div>
     </div>
+    <div *ngIf="step == 2">
+      <h4>skills</h4>
 
-    <div *ngIf="step == 3" formControlName="skills">
-      <h4>work preference</h4>
+      <div [formGroup]="skillsForm">
+        <label for="id">skills</label>
+        <select formControlName="id" id="id" placeholder="skills">
+          <option *ngFor="let skill of skills" [ngValue]="skill.id">
+            {{ skill.title }}
+          </option>
+        </select>
+        <br />
+        <input type="number" formControlName="experience" />
+      </div>
+      <button (click)="addSkillButton()">add skill</button>
+      <div *ngFor="let skill of multiForm.value.skills">
+        <p>{{ skill.id }}</p>
+      </div>
+    </div>
+
+    <div *ngIf="step == 3">
+      <h4>how would you prefer to work?</h4>
       <div>
-        <label for="work_preference">work preference</label>
         <input
-          type="text"
           formControlName="work_preference"
-          id="work_preference"
-          placeholder="work preference"
+          type="radio"
+          id="from_home"
+          value="from_home"
         />
+        <label for="from_home">from home</label><br />
+
+        <input
+          type="radio"
+          id="from_office"
+          formControlName="work_preference"
+          value="from_office"
+        />
+        <label for="from_office">from office</label><br />
+
+        <input
+          type="radio"
+          id="hybrid"
+          formControlName="work_preference"
+          value="hybrid"
+        />
+        <label for="hybrid">hybrid</label>
       </div>
       <h4>had covid</h4>
       <div>
-        <label for="work_preference">had covid</label>
         <input
-          type="text"
+          type="radio"
+          id="had_covid_true"
           formControlName="had_covid"
-          id="had_covid"
-          placeholder="had covid"
+          [value]="true"
+          (click)="addCovidDate()"
         />
+        <label for="had_covid_true">yes</label><br />
+        <input
+          type="radio"
+          id="had_covid_false"
+          formControlName="had_covid"
+          [value]="false"
+          (click)="removeCovidDate()"
+        />
+        <label for="had_covid_false">no</label>
+      </div>
+      <div *ngIf="multiForm.value.had_covid">
+        <label for="had_covid_at">when</label>
+        <input type="text" formControlName="had_covid_at" id="had_covid_at" />
+      </div>
+      <h4>vaccinated</h4>
+      <div>
+        <input
+          type="radio"
+          id="vaccinated_true"
+          formControlName="vaccinated"
+          [value]="true"
+          (click)="addVaccineDate()"
+        />
+        <label for="vaccinated_true">yes</label><br />
+        <input
+          type="radio"
+          id="vaccinated_false"
+          formControlName="vaccinated"
+          [value]="false"
+          (click)="removeVaccineDate()"
+        />
+        <label for="vaccinated_false">no</label>
+      </div>
+      <div *ngIf="multiForm.value.vaccinated">
+        <label for="vaccinated_at">when did you get vaccine</label>
+        <input type="text" formControlName="vaccinated_at" id="vaccinated_at" />
       </div>
     </div>
-
-    <kendo-stepper
-      #stepper
-      [steps]="steps"
-      stepType="full"
-      [(currentStep)]="currentStep"
-    >
-    </kendo-stepper>
+    <div *ngIf="step == 4">
+      <h4>what about you</h4>
+      <div>
+        <h4>would you attend dev talks</h4>
+        <input
+          type="radio"
+          id="devtalk_true"
+          formControlName="will_organize_devtalk"
+          [value]="true"
+        />
+        <label for="devtalk_true">yes</label><br />
+        <input
+          type="radio"
+          id="devtalk_false"
+          formControlName="will_organize_devtalk"
+          [value]="false"
+        />
+        <label for="devtalk_false">no</label>
+      </div>
+      <div>
+        <textarea formControlName="devtalk_topic" id="devtalk_topic"></textarea>
+      </div>
+      <div>
+        <textarea
+          formControlName="something_special"
+          id="something_special"
+        ></textarea>
+      </div>
+    </div>
+    <div class="button-container" *ngIf="step < 5">
+      <button (click)="previous()" form="multiForm">Previous</button>
+      <kendo-stepper
+        #stepper
+        [steps]="steps"
+        stepType="full"
+        [(currentStep)]="currentStep"
+      >
+      </kendo-stepper>
+      <button form="multiForm" (click)="next()">Next</button>
+      <!-- <button (click)="post()">click me</button> -->
+    </div>
+    <div *ngIf="step == 5">
+      <button (click)="post()">Submit</button>
+      <button (click)="previous()">go back</button>
+    </div>
     <pre>{{ multiForm.value | json }}</pre>
+    <pre>{{ skillsForm.value | json }}</pre>
   </form>
 </div>
