--- a/src/app/components/form/form.component.scss
+++ b/src/app/components/form/form.component.scss
@@ -4,6 +4,18 @@
   height: 100vh;
 }
 
+form {
+  width: 50%;
+  height: 100%;
+}
+
+.text-container {
+  background-color: black;
+  width: 50%;
+  height: 100%;
+  color: white;
+}
+
 .tb-10 {
   margin-top: 20px;
   margin-bottom: 20px;
