add submit component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<div>
+  <button routerLink="../form">Start Questionnaire</button>
+  <button routerLink="../applications">Submitted Applications</button>
+</div>
