--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -9,6 +9,12 @@
           formControlName="first_name"
           id="first_name"
           placeholder="First Name"
+          [ngClass]="{
+            error:
+              (multiForm.get('first_name')?.invalid &&
+                multiForm.get('first_name')?.touched) ||
+              (multiForm.get('first_name')?.invalid && clicked)
+          }"
         />
       </div>
       <div>
@@ -18,19 +24,31 @@
           formControlName="last_name"
           id="last_name"
           placeholder="Last Name"
+          [ngClass]="{
+            error:
+              (multiForm.get('last_name')?.invalid &&
+                multiForm.get('last_name')?.touched) ||
+              (multiForm.get('last_name')?.invalid && clicked)
+          }"
         />
       </div>
       <div>
-        <label for="last_name">Email</label>
+        <label for="email">Email</label>
         <input
           type="email"
           formControlName="email"
           id="email"
           placeholder="email"
+          [ngClass]="{
+            error:
+              (multiForm.get('email')?.invalid &&
+                multiForm.get('email')?.touched) ||
+              (multiForm.get('email')?.invalid && clicked)
+          }"
         />
       </div>
       <div>
-        <label for="last_name">Phone</label>
+        <label for="phone">Phone</label>
         <input
           type="text"
           formControlName="phone"
@@ -44,13 +62,32 @@
 
       <div [formGroup]="skillsForm">
         <label for="id">skills</label>
-        <select formControlName="id" id="id" placeholder="skills">
+        <select
+          formControlName="id"
+          id="id"
+          placeholder="skills"
+          [ngClass]="{
+            error:
+              (skillsForm.get('id')?.invalid &&
+                skillsForm.get('id')?.touched) ||
+              (skillsForm.get('id')?.invalid && clicked)
+          }"
+        >
           <option *ngFor="let skill of skills" [ngValue]="skill.id">
             {{ skill.title }}
           </option>
         </select>
         <br />
-        <input type="number" formControlName="experience" />
+        <input
+          type="number"
+          formControlName="experience"
+          [ngClass]="{
+            error:
+              (skillsForm.get('experience')?.invalid &&
+                skillsForm.get('experience')?.touched) ||
+              (skillsForm.get('experience')?.invalid && clicked)
+          }"
+        />
       </div>
       <button (click)="addSkillButton()">add skill</button>
       <div *ngFor="let skill of multiForm.value.skills">
@@ -59,7 +96,16 @@
     </div>
 
     <div *ngIf="step == 3">
-      <h4>how would you prefer to work?</h4>
+      <h4
+        [ngClass]="{
+          error_text:
+            (multiForm.get('work_preference')?.invalid &&
+              multiForm.get('work_preference')?.touched) ||
+            (multiForm.get('work_preference')?.invalid && clicked)
+        }"
+      >
+        how would you prefer to work?
+      </h4>
       <div>
         <input
           formControlName="work_preference"
@@ -85,7 +131,16 @@
         />
         <label for="hybrid">hybrid</label>
       </div>
-      <h4>had covid</h4>
+      <h4
+        [ngClass]="{
+          error_text:
+            (multiForm.get('had_covid')?.invalid &&
+              multiForm.get('had_covid')?.touched) ||
+            (multiForm.get('had_covid')?.invalid && clicked)
+        }"
+      >
+        had covid
+      </h4>
       <div>
         <input
           type="radio"
@@ -108,7 +163,16 @@
         <label for="had_covid_at">when</label>
         <input type="text" formControlName="had_covid_at" id="had_covid_at" />
       </div>
-      <h4>vaccinated</h4>
+      <h4
+        [ngClass]="{
+          error_text:
+            (multiForm.get('vaccinated')?.invalid &&
+              multiForm.get('vaccinated')?.touched) ||
+            (multiForm.get('vaccinated')?.invalid && clicked)
+        }"
+      >
+        vaccinated
+      </h4>
       <div>
         <input
           type="radio"
